<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:contentDescription="logo"
            android:src="@mipmap/ic_launcher_round"
            android:layout_width="80dp"
            android:layout_height="80dp" />
        <TextView
            android:layout_marginTop="16dp"
            android:textColor="@color/ijo"
            android:textSize="@dimen/txt18"
            android:text="@string/welcome1"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginTop="6dp"
            android:textSize="@dimen/txt16"
            android:text="@string/welcome2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/login_et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/item" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/login_et_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_pwd"
                android:inputType="textPassword"
                android:textColor="@color/item" />
        </android.support.design.widget.TextInputLayout>
        <android.support.v7.widget.AppCompatButton
            style="@style/AppTheme.Button"
            android:id="@+id/login_btn_msk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/login_btn"
            android:textAllCaps="false" />
        <android.support.v7.widget.AppCompatButton
            style="@style/AppTheme.Button"
            android:id="@+id/login_dosen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Login dosen"
            android:textAllCaps="false" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_regis"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/login_txt_regis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:background="?attr/selectableItemBackground"
                android:onClick="regis"
                android:text="@string/login_regis2"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>