<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mahasiswa.Register">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_regis"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:background="@color/ijo"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize" />
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_gravity="center_vertical"
        android:padding="16dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.CardView
            app:cardElevation="0dp"
            app:cardCornerRadius="6dp"
            app:contentPadding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_marginBottom="16dp"
                    android:text="Isi data yang sesuai"
                    android:textStyle="bold"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="@dimen/txt16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/regis_et_nim"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/regis_nim"
                        android:inputType="number"
                        android:textColor="@color/item" />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_marginTop="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/regis_et_nama"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:hint="@string/regis_nama"
                        android:textColor="@color/item" />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_marginTop="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/regis_et_pwd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/login_pwd"
                        android:inputType="textPassword"
                        android:textColor="@color/item" />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_marginTop="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/regis_et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/regis_email"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/item" />
                </android.support.design.widget.TextInputLayout>
                <android.support.v7.widget.AppCompatButton
                    style="@style/AppTheme.Button"
                    android:id="@+id/regis_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/regis_btn"
                    android:textAllCaps="false" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>